--- a/website10.html
+++ b/website10.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Responsivetest</title> 
+<title>Videos</title> 
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <link rel="stylesheet" href="websitestyle10.css">
@@ -28,23 +28,24 @@
 
 
 <div class="parent-div">
-    <div class =videodiv><video id="videos" src="/Users/carrogull/Desktop/southafrica/website_southafrica/video/sputum.mp4" alt="sputum" controls></video></div> 
+    <div class =videodiv><video id="videos" src="/Users/carrogull/Desktop/southafrica/website_southafrica/video/sputum.mp4" alt="sputum" controls poster="/Users/carrogull/Desktop/southafrica/website_southafrica/video/sputum.png"></video></div> 
    <div class="illnessText"><h3><p>TB</p></h3></div> 
-    <!--<button class="downloadButtonPosition"><img id="downloadButton" src="https://img.icons8.com/material-outlined/96/000000/download--v1.png"/></button>
-    <button class="earbtn"><img src="https://img.icons8.com/external-soft-fill-juicy-fish/100/000000/external-listening-journalism-soft-fill-soft-fill-juicy-fish.png"/>
+    <button class="downloadButtonPosition"><img id="downloadButton" src="https://img.icons8.com/material-outlined/96/000000/download--v1.png"/></button>
+    <!--<button class="earbtn"><img src="https://img.icons8.com/external-soft-fill-juicy-fish/100/000000/external-listening-journalism-soft-fill-soft-fill-juicy-fish.png"/>
     </button>-->
+
 </div>
 
 <div class="parent-div">
-   <div class =videodiv><video id="videos" src="/Users/carrogull/Desktop/southafrica/website_southafrica/video/Nutrition1.mp4" alt="nutr1" controls></video></div> 
-   <!--<div class="illnessText"><h3><p>Nutrition</p></h3></div>
+   <div class =videodiv><video id="videos" src="/Users/carrogull/Desktop/southafrica/website_southafrica/video/Nutrition1.mp4" alt="nutr1" controls poster="/Users/carrogull/Desktop/southafrica/website_southafrica/video/nutrition1.png"></video></div> 
+   <!--<div class="illnessText"><h3><p>Nutrition in Pregnancy</p></h3></div>
    <button class="downloadButtonPosition"><img id="downloadButton" src="https://img.icons8.com/material-outlined/96/000000/download--v1.png"/></button>
    <button class="earbtn"><img src="https://img.icons8.com/external-soft-fill-juicy-fish/100/000000/external-listening-journalism-soft-fill-soft-fill-juicy-fish.png"/>
    </button>-->
 </div>
 
 <div class="parent-div">
-   <div class =videodiv><video id="videos" src="/Users/carrogull/Desktop/southafrica/website_southafrica/video/Nutrition3.mp4" alt="nutr3" controls></video></div> 
+   <div class =videodiv><video id="videos" src="/Users/carrogull/Desktop/southafrica/website_southafrica/video/Nutrition3.mp4" alt="nutr3" controls poster="/Users/carrogull/Desktop/southafrica/website_southafrica/video/nutrition3.png"></video></div> 
    <!--<div class="illnessText"><h3><p>Nutrition</p></h3></div> 
    <button class="downloadButtonPosition"><img id="downloadButton" src="https://img.icons8.com/material-outlined/96/000000/download--v1.png"/></button>
    <button class="earbtn"><img src="https://img.icons8.com/external-soft-fill-juicy-fish/100/000000/external-listening-journalism-soft-fill-soft-fill-juicy-fish.png"/>
@@ -52,7 +53,7 @@
 </div>
 
 <div class="parent-div">
-   <div class =videodiv><video id="videos" src="/Users/carrogull/Desktop/southafrica/website_southafrica/video/Nutrition5.mp4" alt="nutr5" controls></video></div> 
+   <div class =videodiv><video id="videos" src="/Users/carrogull/Desktop/southafrica/website_southafrica/video/Nutrition5.mp4" alt="nutr5" controls poster="/Users/carrogull/Desktop/southafrica/website_southafrica/video/nutrition5.png"></video></div> 
    <!--<div class="illnessText"><h3><p>Nutrition</p></h3></div> 
    <button class="downloadButtonPosition"><img id="downloadButton" src="https://img.icons8.com/material-outlined/96/000000/download--v1.png"/></button>
    <button class="earbtn"><img src="https://img.icons8.com/external-soft-fill-juicy-fish/100/000000/external-listening-journalism-soft-fill-soft-fill-juicy-fish.png"/>
@@ -60,13 +61,36 @@
 </div>
 
 <div class="parent-div">
-   <div class =videodiv><video id="videos" src="/Users/carrogull/Desktop/southafrica/website_southafrica/video/Nutrition6.mp4" alt="nutr6" controls></video></div> 
+   <div class =videodiv><video id="videos" src="/Users/carrogull/Desktop/southafrica/website_southafrica/video/Nutrition6.mp4" alt="nutr6" controls poster="/Users/carrogull/Desktop/southafrica/website_southafrica/video/nutrition6.png"></video></div> 
    <!--<div class="illnessText"><h3><p>Nutrition</p></h3></div> 
    <button class="downloadButtonPosition"><img id="downloadButton" src="https://img.icons8.com/material-outlined/96/000000/download--v1.png"/></button>
    <button class="earbtn"><img src="https://img.icons8.com/external-soft-fill-juicy-fish/100/000000/external-listening-journalism-soft-fill-soft-fill-juicy-fish.png"/>
    </button>-->
 </div>
-
 
 </body>
+
+
+<!--<script>   
+
+   Counter works. Notice! - It writes the counts directly in the browser. 
+   A visible counter will "motivate" or "frighten" the user?
+
+//<div id="result"></div>
+<p><button onclick="clickCounter()" type="button">Click me!</button></p>  //put outside or script
+
+   function clickCounter() {
+     if (typeof(Storage) !== "undefined") {
+       if (localStorage.clickcount) {
+         localStorage.clickcount = Number(localStorage.clickcount)+1;
+       } else {
+         localStorage.clickcount = 1;
+       }
+       document.getElementById("result").innerHTML = "You have clicked the button " + localStorage.clickcount + " time(s).";
+     } else {
+       document.getElementById("result").innerHTML = "Sorry, your browser does not support web storage...";
+     }
+   }
+   </script>    
+-->
 </html>
